--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,13 +1,31 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
+        users:
+            entity:
+                class: 'App\Entity\User'
+                property: 'email'
         in_memory: { memory: null }
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
+            form_login:
+                provider: fos_userbundle
+                login_path: ^/(_(profiler|wdt)|css|images|js)/_login
+                check_path: ^/(_(profiler|wdt)|css|images|js)/_login_check
+            logout: true
             security: false
         main:
+            http_basic:
+                realm: Secured Area
             anonymous: true
+            guard:
+                authenticators:
+                    - App\Security\LoginAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -18,5 +36,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - {path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY}
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+    encoders:
+          App\Entity\User:
+              algorithm: auto
